@@ -47,16 +47,16 @@ nobase_dist_pkgdata_DATA = \
 	t-utc0/slimpl.m4 \
 	t-utc0/include/sl_support.h \
         mt-profiles/default \
-        mt-profiles/sifir \
-        mt-profiles/bir \
-        mt-profiles/uc \
-        mt-profiles/dort \
-        mt-profiles/bes \
-        mt-profiles/alti \
 	mt-profiles/coma128 \
 	mt-profiles/coma256 \
 	mt-profiles/rmb128 \
 	mt-profiles/rmb256 \
+	mt-profiles/rmb1 \
+	mt-profiles/rmb4 \
+	mt-profiles/ml-npcrypt-p1 \
+	mt-profiles/ml-npcrypt-p2 \
+	mt-profiles/ml-npcrypt-p4 \
+	mt-profiles/ml-npcrypt-p8 \
 	mt-profiles/simple
 
 include $(top_srcdir)/build-aux/sl.mk
